fixed some issues with main js , works right now,needs some clean up

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,8 @@ API_HOST=0.0.0.0
 API_PORT=5000
 
 # CORS Settings (Allow frontend to connect)
-CORS_ORIGINS=http://localhost:8000,http://127.0.0.1:8000
+# Include 3000 (new default) and keep 8000 for backwards compatibility
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:8000,http://127.0.0.1:8000
 
 # Database Configuration
 DATABASE_URL=sqlite+aiosqlite:///./space_catalog.db
