--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -6,6 +6,7 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install
@@ -15,12 +16,15 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy backend code
 COPY backend/ .
 
-# Expose port 8080 (Azure requirement)
-EXPOSE 8080
+# Create logs directory
+RUN mkdir -p /app/logs /app/data
+
+# Expose port 5000
+EXPOSE 5000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8080/health').read()" || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
+    CMD curl -f http://localhost:5000/health || exit 1
 
-# Run Uvicorn on port 8080 (Azure standard)
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
+# Run Uvicorn on port 5000
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
