--- a/Dockerfile.combined
+++ b/Dockerfile.combined
@@ -1,12 +1,8 @@
 # Combined container: Backend serves both API and static frontend
+# Simple setup - FastAPI serves everything on port 8080
 FROM python:3.11-slim
 
 WORKDIR /app
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
 
 # Copy backend
 COPY backend/ /app/backend/
@@ -15,18 +11,21 @@ COPY backend/ /app/backend/
 COPY viewer/ /app/viewer/
 COPY data/ /app/data/
 
-# Install Python dependencies
+# Install Python dependencies (no apt-get needed!)
 RUN pip install --no-cache-dir -r /app/backend/requirements.txt
 
-# Expose port 5000 (backend serves everything)
-EXPOSE 5000
+# Create logs directory
+RUN mkdir -p /app/logs
 
-# Health check
+# Expose port 8080
+EXPOSE 8080
+
+# Health check using Python (no curl needed)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=15s --retries=3 \
-    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:5000/health').read()" || exit 1
+    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8080/health').read()" || exit 1
 
 # Set working directory to backend
 WORKDIR /app/backend
 
-# Run backend only (it serves static files too via FastAPI)
-CMD ["python", "-m", "uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000", "--log-level", "info"]
+# Run backend on port 8080 (serves API + static files)
+CMD ["python", "-m", "uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080", "--log-level", "info"]
