--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -3,20 +3,21 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Install curl for health checks
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy viewer files
 COPY viewer/ /app/viewer/
 COPY data/ /app/data/
-COPY viewer/index.html /app/index.html
-
-# Install a better HTTP server
-RUN pip install http-server
 
 # Expose port 3000
 EXPOSE 3000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:3000/viewer/index.html').read()" || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
+    CMD curl -f http://localhost:3000/viewer/index.html || exit 1
 
-# Run HTTP server (serves index.html as default)
+# Run HTTP server on port 3000 (serves from /app)
 CMD ["python", "-m", "http.server", "3000", "--directory", "/app"]
