--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
       context: .
       dockerfile: Dockerfile.backend
     container_name: celestial-navigator-backend
+    restart: unless-stopped
     ports:
       - "5000:5000"
     environment:
       - PYTHONUNBUFFERED=1
+      - LOG_LEVEL=INFO
     volumes:
       - ./data:/app/data
       - ./logs:/app/logs
@@ -18,26 +20,35 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 15s
+    networks:
+      - celestial-network
 
   frontend:
     build:
       context: .
       dockerfile: Dockerfile.frontend
     container_name: celestial-navigator-frontend
+    restart: unless-stopped
     ports:
       - "3000:3000"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     environment:
       - PYTHONUNBUFFERED=1
+    volumes:
+      - ./viewer:/app/viewer:ro
+      - ./data:/app/data:ro
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/viewer/index.html"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 15s
+    networks:
+      - celestial-network
 
 networks:
-  default:
-    name: celestial-navigator-network
+  celestial-network:
+    driver: bridge
