--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  backend:
+  app:
     build:
       context: .
-      dockerfile: Dockerfile.backend
-    container_name: celestial-navigator-backend
+      dockerfile: Dockerfile
+    container_name: stellar-cartographer-app
     restart: unless-stopped
     ports:
       - "5000:5000"
@@ -16,39 +16,12 @@ services:
       - ./data:/app/data
       - ./logs:/app/logs
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:5000/health').read()"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 15s
-    networks:
-      - celestial-network
-
-  frontend:
-    build:
-      context: .
-      dockerfile: Dockerfile.frontend
-    container_name: celestial-navigator-frontend
-    restart: unless-stopped
-    ports:
-      - "3000:3000"
-    depends_on:
-      backend:
-        condition: service_healthy
-    environment:
-      - PYTHONUNBUFFERED=1
-    volumes:
-      - ./viewer:/app/viewer:ro
-      - ./data:/app/data:ro
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/viewer/index.html"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 15s
-    networks:
-      - celestial-network
+      start_period: 20s
 
 networks:
-  celestial-network:
-    driver: bridge
+  default:
+    name: stellar-cartographer-network
